adding Experience to portfolio

--- a/index.html
+++ b/index.html
@@ -55,6 +55,101 @@
     </div>
   </section>
 
+  <section id="experience" class="experience-section">
+    <div class="container">
+      <h2>Professional Experience</h2>
+      <div class="timeline">
+
+        <!-- Job 1 -->
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>AI Research Fellowship</h3>
+              <span class="company">Handshake AI</span>
+              <span class="date">Oct 2025 – December 2025</span>
+            </div>
+            <ul class="job-description">
+              <li>Reviewed large volumes of model outputs to identify reasoning flaws, factual mistakes, and recurring
+                failure patterns.</li>
+              <li>Built Python utilities that parsed AI responses, flagged structural or semantic anomalies, and
+                generated polished summaries.</li>
+              <li>Designed targeted test sets to evaluate reasoning depth, factual reliability, and strict adherence to
+                output rules.</li>
+              <li>Added layered validation checks and refined prompts to stabilize behavior, reduce inconsistencies, and
+                boost overall accuracy.</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Job 2 -->
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>AI Engineer Intern</h3>
+              <span class="company">TECH GIANT</span>
+              <span class="date">Jan 2025 – Sep 2025</span>
+            </div>
+            <ul class="job-description">
+              <li>Developed a conversational chatbot using the ChatGPT MCP platform and API to automate guest support
+                tasks such as reservations, room-service queries, property information, and troubleshooting.</li>
+              <li>Designed MCP tools and custom endpoints to let the chatbot securely access internal hospitality
+                systems, retrieve real-time data.</li>
+              <li>Built prompt flows and guardrail logic to control model behavior, reduce hallucination, and ensure
+                consistent responses.</li>
+              <li>Integrated the chatbot into the client’s operational environment, improving response times and
+                reducing load on customer support.</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Job 3 -->
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>Data Automation Engineer</h3>
+              <span class="company">Vaymode</span>
+              <span class="date">Jan 2024 – Aug 2024</span>
+            </div>
+            <ul class="job-description">
+              <li>Wrote complex SQL queries for cost/usage analytics, anomaly detection, and ad-hoc business questions.
+              </li>
+              <li>Engineered Python pipelines to ingest and normalize material cost data, utility expenses, and
+                machinery usage.</li>
+              <li>Built Python ETL jobs and SQL transformations that integrated cost datasets into reporting dashboards.
+              </li>
+              <li>Worked with cost, utility, and spending datasets to surface financial anomalies and improve
+                decision-making.</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Job 4 -->
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>Project Assistant</h3>
+              <span class="company">PVPSIT</span>
+              <span class="date">Aug 2022 – Jan 2024</span>
+            </div>
+            <ul class="job-description">
+              <li>Processed and cleaned up 10,000+ student and scholarship records, standardizing data for analysis,
+                reporting, and long-term tracking.</li>
+              <li>Built automated email workflows that delivered 1,500+ fee-due reminders each cycle, cutting manual
+                admin effort by 70%.</li>
+              <li>Produced concise insights that improved visibility into fee trends and scholarship distribution across
+                5+ departments.</li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   <section id="projects" class="projects-section">
     <div class="container">
       <h2>Projects</h2>
